:+1: add 2D-CFT.tex

--- a/CFT.tex
+++ b/CFT.tex
@@ -82,9 +82,11 @@ pdfauthor={}
 \maketitle
 \tableofcontents
 \input{src/conformal-transformation.tex}
+\input{src/2D-CFT.tex}
 \chapter{場と共形不変性}
 \section{場の共形変換}
 \(d\)次元時空における\(N\)成分場\(\phi^{a}(x)\)の共形変換を考える．
+
 \bibliography{bibliography}
 \bibliographystyle{junsrt}
 \end{document}
