--- a/src/conformal-transformation.tex
+++ b/src/conformal-transformation.tex
@@ -132,8 +132,8 @@
 		\partial_{\mu}\varepsilon^{\mu}(x)=\frac{d}{2}\omega(x),\quad{}\omega(x)=\frac{2}{d}\partial_{\mu}\varepsilon^{\mu}(x).
 	\end{align}
 	の関係がある．従って共形Killing方程式は
-	\begin{align}
-		\partial_{\mu}\varepsilon_{\nu}(x)+\partial_{\nu}\varepsilon_{\mu}(x)=\frac{2}{d}g_{\mu\nu}\partial_{\rho}\varepsilon_{\rho}(x).
+	\begin{align}\label{eq::conformal-Killing-equation-2}
+		\partial_{\mu}\varepsilon_{\nu}(x)+\partial_{\nu}\varepsilon_{\mu}(x)=\frac{2}{d}g_{\mu\nu}\partial_{\rho}\varepsilon^{\rho}(x).
 	\end{align}
 	これを満たす\(\varepsilon^{\mu}(x)\)を共形Killingベクトル (conformal Killing vector) という．
 \end{prop}
@@ -595,4 +595,3 @@
 		[\hat{M}_{\mu\nu},\hat{M}_{\rho\sigma}]=i\eta_{\mu\rho}\hat{M}_{\nu\sigma}-i\eta_{\nu\rho}\hat{M}_{\mu\sigma}-i\eta_{\mu\sigma}\hat{M}_{\nu\rho}+i\eta_{\nu\sigma}\hat{M}_{\mu\rho}.
 	\end{align}
 \end{proof}
-\section{2次元の共形変換}
